10/24 가이드, 이벤트 페이지 코딩, 미디어 쿼리 적용

--- a/pages/event.html
+++ b/pages/event.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>부산국제영화제</title>
+    <link rel="stylesheet" href="../library/fontawesome-free-5.15.4-web/css/all.min.css">   
     <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/event.css">
 </head>
 <body>
     <!-- 상단바(공통) -->
@@ -28,6 +30,61 @@
             </div>
         </nav>
     </header>
+    <!-- 야외 무대인사 -->
+    <section id="content_event">
+        <h1>야외 무대인사</h1>
+        <div class="event_container">
+            <h3>입장 및 운영 안내</h3>
+            <p>
+                1. 야외무대인사 & 오픈토크 행사는 코로나19 방역 수칙을 준수하여 운영합니다.<br />
+                2. 사회적 거리 두기 지침에 따라 선착순 250명만 입장이 가능합니다.<br />
+                3. 관객석 선착순 입장 대니는 행사 시작 1시간 전부터 가능합니다.<br />
+                4. 발열 체크와 출입 기록을 위하여 임시 관객석 입구와 출구는 각각 1개입니다.<br />
+                5. 모든 관객은 마스크를 반드시 착용하셔야 하며, 체온이 37.5 도 이상이면 입장이 제한됩니다.
+                <br /><br /> 
+                위의 안내 사항을 참고하셔서 즐거운 행사 관람이 되시기 바랍니다.<br />
+                행사장 운영 인력과 자원봉사자의 안내 및 진행에 적극적인 협조를 부탁드립니다.
+            </p>
+        </div>
+        <div class="event_container_i">
+            <div class="film item">
+                <div class="bg">
+                    <img src="../images/film_img1.png" alt="">
+                </div>
+                <div class="caption">
+                    <h4>Lorem ipsum</h4>
+                    <h5>Lorem ipsum</h5>
+                </div>
+            </div>
+            <div class="film item">
+                <div class="bg">
+                    <img src="../images/film_img1.png" alt="">
+                </div>
+                <div class="caption">
+                    <h4>Lorem ipsum</h4>
+                    <h5>Lorem ipsum</h5>
+                </div>
+            </div>
+            <div class="film item">
+                <div class="bg">
+                    <img src="../images/film_img1.png" alt="">
+                </div>
+                <div class="caption">
+                    <h4>Lorem ipsum</h4>
+                    <h5>Lorem ipsum</h5>
+                </div>
+            </div>
+            <div class="film item">
+                <div class="bg">
+                    <img src="../images/film_img1.png" alt="">
+                </div>
+                <div class="caption">
+                    <h4>Lorem ipsum</h4>
+                    <h5>Lorem ipsum</h5>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- 스폰서 -->
     <section id="main_sponser">
         스폰서
