모바일화면 수정

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                   </div>
                   <div class="gnb"> 
                         <ul>
-                              <li><a href="announce.html">부산국제영화제</a></li>
-                              <li><a href="program.html">프로그램</a></li>
-                              <li><a href="guide.html">가이드</a></li>
-                              <li><a href="event.html">이벤트</a></li>
+                              <li><a href="pages/announce.html">부산국제영화제</a></li>
+                              <li><a href="pages/program.html">프로그램</a></li>
+                              <li><a href="pages/guide.html">가이드</a></li>
+                              <li><a href="pages/event.html">이벤트</a></li>
                         </ul>
                   </div>
                   <div class="trigger">
@@ -241,6 +241,7 @@
                   </section>
             </section>
       </div>
+      <!-- 모바일 메뉴 -->
       <div id="mobile_menu"></div>
       <!-- 스폰서 -->
       <section id="main_sponser">
