--- a/pages/announce.html
+++ b/pages/announce.html
@@ -133,6 +133,8 @@
                   </div>
             </section>
       </div>
+      <!-- 모바일 메뉴 -->
+      <div id="mobile_menu"></div>
       <!-- 스폰서 -->
       <section id="main_sponser">
             스폰서
