--- a/pages/event.html
+++ b/pages/event.html
@@ -85,6 +85,8 @@
             </div>
         </div>
     </section>
+    <!-- 모바일 메뉴 -->
+    <div id="mobile_menu"></div>
     <!-- 스폰서 -->
     <section id="main_sponser">
         스폰서
