--- a/pages/guide.html
+++ b/pages/guide.html
@@ -84,6 +84,8 @@
             <div class="map_container"></div>
         </section>
     </div>
+    <!-- 모바일 메뉴 -->
+    <div id="mobile_menu"></div>
     <!-- 스폰서 -->
     <section id="main_sponser">
         스폰서
