--- a/pages/program.html
+++ b/pages/program.html
@@ -152,6 +152,8 @@
             </div>
         </section>
     </div>
+    <!-- 모바일 메뉴 -->
+    <div id="mobile_menu"></div>
     <!-- 스폰서 -->
     <section id="main_sponser">
         스폰서
