소개 페이지 수정

--- a/pages/announce.html
+++ b/pages/announce.html
@@ -71,7 +71,9 @@
             <section id="content_poster">
                   <h1>포스터</h1>
                   <div class="poster_container">
-                        <img src="../images/poster.png" width="300px" alt="포스터">
+                        <div class="poster_img">
+                              <img src="../images/poster.png" width="300px" alt="포스터">
+                        </div>
                         <div class="poster_text">
                               <p>
                                     Memory 2021<br/>
