10/25 미디어 쿼리 수정, 탭 색상 코드 적용, 이미지 적용

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <header id="main_header">
             <nav class="gnb_container">
                   <div class="logo">
-                        <a href="#"><img src="images/logo_m.png" alt="로고"></a>
+                        <a href="index.html"><img src="images/logo_m.png" alt="로고"></a>
                   </div>
                   <div class="gnb"> 
                         <ul>
@@ -49,12 +49,12 @@
             <section id="content_event">
                   <div id="event_text">
                         <h3>EVENT</h3>
-                        <p>더보기+</p>
+                        <p><a href="pages/event.html">더보기+</a></p>
                   </div>
                   <div id="event_container">
-                        <img class="event_item" src="./images/event_open_bg.png">
-                        <img class="event_item" src="./images/event_item.png">
-                        <img class="event_item" src="./images/event_close_bg.png">
+                        <img class="event_item" src="./images/event_open_bg.png" alt="이벤트 이미지">
+                        <img class="event_item" src="./images/event_item.png" alt="이벤트 이미지">
+                        <img class="event_item" src="./images/event_close_bg.png" alt="이벤트 이미지">
                   </div>
             </section>
             <!-- 슬라이더 (작은 이미지) -->
@@ -79,7 +79,7 @@
                   <div class="films_container">
                         <div class="left-row film film1">
                               <div class="bg">
-                                    <img class="bg-img" src="./images/film_img1.png" alt="">
+                                    <img class="bg-img" src="./images/film_img1.png" alt="갤러리 이미지">
                               </div>
                               <div class="film-caption">
                                     <h4>나는 감독이다</h4>
@@ -89,7 +89,7 @@
                         <div class="right-row">
                               <div class="film film2">
                                     <div class="bg">
-                                          <img class="bg-img" src="./images/film_img5.png" alt="">
+                                          <img class="bg-img" src="./images/film_img5.png" alt="갤러리 이미지">
                                     </div>
                                     <div class="film-caption">
                                           <h4>유람선</h4>
@@ -98,7 +98,7 @@
                               </div>
                               <div class="film film3">
                                     <div class="bg">
-                                          <img class="bg-img" src="./images/film_img6.png" alt="">
+                                          <img class="bg-img" src="./images/film_img6.png" alt="갤러리 이미지">
                                     </div>
                                     <div class="film-caption">
                                           <h4>즐거운 저녁이여</h4>
@@ -111,12 +111,12 @@
                                           <h5>Lorem ipsum</h5>
                                     </div>
                                     <div class="bg">
-                                          <img class="bg-img" src="./images/test_img_1_1.png" alt="">
+                                          <img class="bg-img" src="./images/test_img_1_1.png" alt="갤러리 빈 이미지">
                                     </div>
                               </div>
                               <div class="film hidden">
                                     <div class="bg">
-                                          <img class="bg-img" src="./images/test_img_1_1.png" alt="">
+                                          <img class="bg-img" src="./images/test_img_1_1.png" alt="갤러리 빈 이미지">
                                     </div>
                                     <div class="film-caption">
                                           <h4></h4>
@@ -125,7 +125,7 @@
                               </div>
                               <div class="film film4">
                                     <div class="bg">
-                                          <img class="bg-img" src="./images/film_img4.png" alt="">
+                                          <img class="bg-img" src="./images/film_img4.png" alt="갤러리 이미지">
                                     </div>
                                     <div class="film-caption">
                                           <h4>남자들의 대화</h4>
@@ -138,12 +138,12 @@
                                           <h5>Lorem ipsum</h5>
                                     </div>
                                     <div class="bg">
-                                          <img class="bg-img" src="./images/test_img_1_1.png" alt="">
+                                          <img class="bg-img" src="./images/test_img_1_1.png" alt="갤러리 빈 이미지">
                                     </div>
                               </div>
                               <div class="film film5">
                                     <div class="bg">
-                                          <img class="bg-img" src="./images/film_img7.png" alt="">
+                                          <img class="bg-img" src="./images/film_img7.png" alt="갤러리 이미지">
                                     </div>
                                     <div class="film-caption">
                                           <h4>미국의 아침</h4>
@@ -152,7 +152,7 @@
                               </div>
                               <div class="film hidden">
                                     <div class="bg">
-                                          <img class="bg-img" src="./images/test_img_1_1.png" alt="">
+                                          <img class="bg-img" src="./images/test_img_1_1.png" alt="갤러리 빈 이미지">
                                     </div>
                                     <div class="film-caption">
                                           <h4></h4>
@@ -161,7 +161,7 @@
                               </div>
                               <div class="film film6">
                                     <div class="bg">
-                                          <img class="bg-img" src="./images/film_img8.png" alt="">
+                                          <img class="bg-img" src="./images/film_img8.png" alt="갤러리 이미지">
                                     </div>
                                     <div class="film-caption">
                                           <h4>두유 노우 코비드</h4>
@@ -172,7 +172,7 @@
                   </div>
             </section>
             <!-- 공지사항, 뉴스 -->
-            <section id="content_text">
+            <div id="content_text">
                   <section class="container_notice">
                         <h3>공지사항</h3>
                         <article class="notice_item">
@@ -239,13 +239,19 @@
                               </div>
                         </article>
                   </section>
-            </section>
+            </div>
       </div>
       <!-- 모바일 메뉴 -->
       <div id="mobile_menu"></div>
       <!-- 스폰서 -->
       <section id="main_sponser">
-            스폰서
+            <div>
+                  <img src="./images/logo_cgv.png" alt="스폰서 로고">
+                  <img src="./images/logo_lotte_c.png" alt="스폰서 로고">
+                  <img src="./images/logo_showbox.png" alt="스폰서 로고">
+                  <img src="./images/logo_cj.png" alt="스폰서 로고">
+                  <img src="./images/logo_busanbank.png" alt="스폰서 로고">
+            </div>
       </section>
       <!-- 푸터(공통) -->
       <footer id="main_footer">
