--- a/pages/announce.html
+++ b/pages/announce.html
@@ -14,14 +14,14 @@
       <header id="main_header">
             <nav class="gnb_container">
                   <div class="logo">
-                        <a href="#"><img src="../images/logo_m.png" alt="로고"></a>
+                        <a href="../index.html"><img src="../images/logo_m.png" alt="로고"></a>
                   </div>
                   <div class="gnb"> 
                         <ul>
-                              <li><a href="#">부산국제영화제</a></li>
-                              <li><a href="#">프로그램</a></li>
-                              <li><a href="#">가이드</a></li>
-                              <li><a href="#">이벤트</a></li>
+                              <li><a href="../pages/announce.html">부산국제영화제</a></li>
+                              <li><a href="../pages/program.html">프로그램</a></li>
+                              <li><a href="../pages/guide.html">가이드</a></li>
+                              <li><a href="../pages/event.html">이벤트</a></li>
                         </ul>
                   </div>
                   <div class="trigger">
@@ -97,41 +97,43 @@
                   <h1>심사위원 & 시상</h1>
                   <div>
                         <div class="winner item">
-                             <img src="../images/film_img1.png" alt="">
-                             <h5>Lorem ipsum</h5> 
+                              <img src="../images/people01.png" alt="심사위원 이미지">
+                              <h5>제임스 존 | 감독 | 심사위원</h5> 
                         </div>
                         <div class="winner item">
-                              <img src="../images/film_img1.png" alt="">
-                              <h5>Lorem ipsum</h5> 
-                         </div>
-                         <div class="winner item">
-                              <img src="../images/film_img1.png" alt="">
-                              <h5>Lorem ipsum</h5> 
-                         </div>
-                         <div class="winner item">
-                              <img src="../images/film_img1.png" alt="">
-                              <h5>Lorem ipsum</h5> 
-                         </div>
-                         <div class="winner item">
-                              <img src="../images/film_img1.png" alt="">
-                              <h5>Lorem ipsum</h5> 
-                         </div>
-                         <div class="winner item">
-                              <img src="../images/film_img1.png" alt="">
-                              <h5>Lorem ipsum</h5> 
-                         </div>
+                              <img src="../images/people02.png" alt="수상자 이미지">
+                              <h5>정감독 | 대한민국 | 감독</h5> 
+                        </div>
+                        <div class="winner item">
+                              <img src="../images/people03.png" alt="수상자 이미지">
+                              <h5>제니 | 미국 | 감독</h5> 
+                        </div>
+                        <div class="winner item">
+                              <img src="../images/people04.png" alt="심사위원 이미지">
+                              <h5>엠마스완 | 감독 | 심사위원</h5> 
+                        </div>
+                        <div class="winner item">
+                              <img src="../images/people05.png" alt="수상자 이미지">
+                              <h5>사만다 리 | 브라질 | 감독</h5> 
+                        </div>
+                        <div class="winner item">
+                              <img src="../images/people06.png" alt="수상자 이미지">
+                              <h5>클라라 리 | 대한민국 | 감독</h5> 
+                        </div>
                   </div>
             </section>
             <!-- 컨텐츠 - 파트너 -->
             <section id="content_partner">
                   <h1>파트너</h1>
                   <div class="partner_container">
-                        <img src="../images/film_img1.png" alt="">
-                        <img src="../images/film_img1.png" alt="">
-                        <img src="../images/film_img1.png" alt="">
-                        <img src="../images/film_img1.png" alt="">
-                        <img src="../images/film_img1.png" alt="">
-                        <img src="../images/film_img1.png" alt="">
+                        <img src="../images/logo_cgv.png" alt="스폰서 로고">
+                        <img src="../images/logo_lotte_c.png" alt="스폰서 로고">
+                        <img src="../images/logo_showbox.png" alt="스폰서 로고">
+                        <img src="../images/logo_cj.png" alt="스폰서 로고">
+                        <img src="../images/logo_busanbank.png" alt="스폰서 로고">
+                        <img src="../images/logo_naver.png" alt="스폰서 로고">
+                        <img src="../images/logo_koreanair.png" alt="스폰서 로고">
+                        <img src="../images/logo_genesis.png" alt="스폰서 로고">
                   </div>
             </section>
       </div>
@@ -139,7 +141,13 @@
       <div id="mobile_menu"></div>
       <!-- 스폰서 -->
       <section id="main_sponser">
-            스폰서
+            <div>
+                  <img src="../images/logo_cgv.png" alt="스폰서 로고">
+                  <img src="../images/logo_lotte_c.png" alt="스폰서 로고">
+                  <img src="../images/logo_showbox.png" alt="스폰서 로고">
+                  <img src="../images/logo_cj.png" alt="스폰서 로고">
+                  <img src="../images/logo_busanbank.png" alt="스폰서 로고">
+            </div>
       </section>
       <!-- 푸터(공통) -->
       <footer id="main_footer">
