--- a/pages/event.html
+++ b/pages/event.html
@@ -14,14 +14,14 @@
     <header id="main_header">
         <nav class="gnb_container">
             <div class="logo">
-                    <a href="#"><img src="../images/logo_m.png" alt="로고"></a>
+                    <a href="../index.html"><img src="../images/logo_m.png" alt="로고"></a>
             </div>
             <div class="gnb"> 
                     <ul>
-                        <li><a href="#">부산국제영화제</a></li>
-                        <li><a href="#">프로그램</a></li>
-                        <li><a href="#">가이드</a></li>
-                        <li><a href="#">이벤트</a></li>
+                        <li><a href="../pages/announce.html">부산국제영화제</a></li>
+                        <li><a href="../pages/program.html">프로그램</a></li>
+                        <li><a href="../pages/guide.html">가이드</a></li>
+                        <li><a href="../pages/event.html">이벤트</a></li>
                     </ul>
             </div>
             <div class="trigger">
@@ -49,38 +49,38 @@
         <div class="event_container_i">
             <div class="film item">
                 <div class="bg">
-                    <img src="../images/film_img1.png" alt="">
+                    <img src="../images/film_img2.png" alt="무대인사 이미지">
                 </div>
                 <div class="caption">
-                    <h4>Lorem ipsum</h4>
-                    <h5>Lorem ipsum</h5>
+                    <h4>10.8(금) 13:00 야외무대인사</h4>
+                    <h5>영화의전당 BIFFXGENSIS 야외무대</h5>
                 </div>
             </div>
             <div class="film item">
                 <div class="bg">
-                    <img src="../images/film_img1.png" alt="">
+                    <img src="../images/film_img7.png" alt="무대인사 이미지">
                 </div>
                 <div class="caption">
-                    <h4>Lorem ipsum</h4>
-                    <h5>Lorem ipsum</h5>
+                    <h4>10.8(금) 13:30 야외무대인사</h4>
+                    <h5>영화의전당 BIFFXGENSIS 야외무대</h5>
                 </div>
             </div>
             <div class="film item">
                 <div class="bg">
-                    <img src="../images/film_img1.png" alt="">
+                    <img src="../images/film_img6.png" alt="무대인사 이미지">
                 </div>
                 <div class="caption">
-                    <h4>Lorem ipsum</h4>
-                    <h5>Lorem ipsum</h5>
+                    <h4>10.9(토) 12:00 야외무대인사</h4>
+                    <h5>영화의전당 BIFFXGENSIS 야외무대/h5>
                 </div>
             </div>
             <div class="film item">
                 <div class="bg">
-                    <img src="../images/film_img1.png" alt="">
+                    <img src="../images/film_img8.png" alt="무대인사 이미지">
                 </div>
                 <div class="caption">
-                    <h4>Lorem ipsum</h4>
-                    <h5>Lorem ipsum</h5>
+                    <h4>10.9(토) 15:00 야외무대인사</h4>
+                    <h5>영화의전당 BIFFXGENSIS 야외무대</h5>
                 </div>
             </div>
         </div>
@@ -89,7 +89,13 @@
     <div id="mobile_menu"></div>
     <!-- 스폰서 -->
     <section id="main_sponser">
-        스폰서
+        <div>
+            <img src="../images/logo_cgv.png" alt="스폰서 로고">
+            <img src="../images/logo_lotte_c.png" alt="스폰서 로고">
+            <img src="../images/logo_showbox.png" alt="스폰서 로고">
+            <img src="../images/logo_cj.png" alt="스폰서 로고">
+            <img src="../images/logo_busanbank.png" alt="스폰서 로고">
+        </div>
     </section>
     <!-- 푸터(공통) -->
     <footer id="main_footer">
