--- a/pages/guide.html
+++ b/pages/guide.html
@@ -14,14 +14,14 @@
     <header id="main_header">
         <nav class="gnb_container">
             <div class="logo">
-                    <a href="#"><img src="../images/logo_m.png" alt="로고"></a>
+                    <a href="../index.html"><img src="../images/logo_m.png" alt="로고"></a>
             </div>
             <div class="gnb"> 
                     <ul>
-                        <li><a href="#">부산국제영화제</a></li>
-                        <li><a href="#">프로그램</a></li>
-                        <li><a href="#">가이드</a></li>
-                        <li><a href="#">이벤트</a></li>
+                        <li><a href="../pages/announce.html">부산국제영화제</a></li>
+                        <li><a href="../pages/program.html">프로그램</a></li>
+                        <li><a href="../pages/guide.html">가이드</a></li>
+                        <li><a href="../pages/event.html">이벤트</a></li>
                     </ul>
             </div>
             <div class="trigger">
@@ -33,8 +33,8 @@
     <!-- 메뉴 -->
     <aside id="main_aside">
         <ul>
-            <li class="guide gnb"><a href="#">개폐막식 안내</a></li>
-            <li class="guide gnb"><a href="#">지도</a></li>
+            <li class="guide_gnb"><a href="#">개폐막식 안내</a></li>
+            <li class="guide_gnb"><a href="#">지도</a></li>
         </ul>
     </aside>
     <div id="wrap">
@@ -88,7 +88,13 @@
     <div id="mobile_menu"></div>
     <!-- 스폰서 -->
     <section id="main_sponser">
-        스폰서
+        <div>
+            <img src="../images/logo_cgv.png" alt="스폰서 로고">
+            <img src="../images/logo_lotte_c.png" alt="스폰서 로고">
+            <img src="../images/logo_showbox.png" alt="스폰서 로고">
+            <img src="../images/logo_cj.png" alt="스폰서 로고">
+            <img src="../images/logo_busanbank.png" alt="스폰서 로고">
+        </div>
     </section>
     <!-- 푸터(공통) -->
     <footer id="main_footer">
