--- a/pages/program.html
+++ b/pages/program.html
@@ -14,14 +14,14 @@
     <header id="main_header">
         <nav class="gnb_container">
             <div class="logo">
-                    <a href="#"><img src="../images/logo_m.png" alt="로고"></a>
+                    <a href="../index.html"><img src="../images/logo_m.png" alt="로고"></a>
             </div>
             <div class="gnb"> 
                     <ul>
-                        <li><a href="#">부산국제영화제</a></li>
-                        <li><a href="#">프로그램</a></li>
-                        <li><a href="#">가이드</a></li>
-                        <li><a href="#">이벤트</a></li>
+                        <li><a href="../pages/announce.html">부산국제영화제</a></li>
+                        <li><a href="../pages/program.html">프로그램</a></li>
+                        <li><a href="../pages/guide.html">가이드</a></li>
+                        <li><a href="../pages/event.html">이벤트</a></li>
                     </ul>
             </div>
             <div class="trigger">
@@ -37,56 +37,56 @@
             <div class="program_container">
                 <div class="film item">
                     <div class="bg">
-                        <img src="../images/film_img1.png" alt="">
+                        <img class="bg-img" src="../images/film_img3.png" alt="오늘의 상영작 이미지">
                     </div>
                     <div class="caption">
-                        <h4>Lorem ipsum</h4> 
-                        <h5>Lorem ipsum</h5> 
+                        <h4>책 읽는 아이</h4> 
+                        <h5>아이가 석양 앞에서 책을 읽고 있다.</h5> 
                     </div>
                 </div>
                 <div class="film item">
                     <div class="bg">
-                        <img src="../images/film_img1.png" alt="">
+                        <img class="bg-img" src="../images/film_img5.png" alt="오늘의 상영작 이미지">
                     </div>
                     <div class="caption">
-                        <h4>Lorem ipsum</h4> 
-                        <h5>Lorem ipsum</h5> 
+                        <h4>유람선</h4> 
+                        <h5>해적들이 배에 올라타고 있다.</h5> 
                     </div>
                 </div>
                 <div class="film item">
                     <div class="bg">
-                        <img src="../images/film_img1.png" alt="">
+                        <img class="bg-img" src="../images/film_img4.png" alt="오늘의 상영작 이미지">
                     </div>
                     <div class="caption">
-                        <h4>Lorem ipsum</h4> 
-                        <h5>Lorem ipsum</h5> 
+                        <h4>남자들의 대화</h4> 
+                        <h5>세 친구들이 대화를 나누고 있다.</h5> 
                     </div>
                 </div>
                 <div class="film item">
                     <div class="bg">
-                        <img src="../images/film_img1.png" alt="">
+                        <img class="bg-img" src="../images/film_img2.png" alt="오늘의 상영작 이미지">
                     </div>
                     <div class="caption">
-                        <h4>Lorem ipsum</h4> 
-                        <h5>Lorem ipsum</h5> 
+                        <h4>바쁜 현대인의 생활</h4> 
+                        <h5>회사원들의 바쁜 일상 생활을 다룬 다큐멘터리</h5> 
                     </div>
                 </div>
                 <div class="film item">
                     <div class="bg">
-                        <img src="../images/film_img1.png" alt="">
+                        <img class="bg-img" src="../images/film_img12.png" alt="오늘의 상영작 이미지">
                     </div>
                     <div class="caption">
-                        <h4>Lorem ipsum</h4> 
-                        <h5>Lorem ipsum</h5> 
+                        <h4>노인의 취미생활</h4> 
+                        <h5>노인의 취미생활을 그린 다큐멘터리</h5> 
                     </div>
                 </div>
                 <div class="film item">
                     <div class="bg">
-                        <img src="../images/film_img1.png" alt="">
+                        <img class="bg-img" src="../images/film_img10.png" alt="오늘의 상영작 이미지">
                     </div>
                     <div class="caption">
-                        <h4>Lorem ipsum</h4> 
-                        <h5>Lorem ipsum</h5> 
+                        <h4>거리의 오토바이들</h4> 
+                        <h5>환경이냐 운송수단이냐 그것이 문제로다.</h5> 
                     </div>
                 </div>
             </div>
@@ -97,56 +97,47 @@
             <div class="program_container">
                 <div class="film item">
                     <div class="bg">
-                        <img src="../images/film_img1.png" alt="">
+                        <img class="bg-img" src="../images/film_img7.png" alt="상영 예정작 이미지">
                     </div>
                     <div class="caption">
-                        <h4>Lorem ipsum</h4> 
-                        <h5>Lorem ipsum</h5> 
+                        <h4>미국의 아침을</h4> 
+                        <h5>여행자가 미국에서 그토록 원하던 인앤아웃버거를 먹으러 갔다.</h5> 
                     </div>
                 </div>
                 <div class="film item">
                     <div class="bg">
-                        <img src="../images/film_img1.png" alt="">
+                        <img class="bg-img" src="../images/film_img8.png" alt="상영 예정작 이미지">
                     </div>
                     <div class="caption">
-                        <h4>Lorem ipsum</h4> 
-                        <h5>Lorem ipsum</h5> 
+                        <h4>두유 노우 코비드</h4> 
+                        <h5>어느 노인이 코로나를 알리고 있다.</h5> 
                     </div>
                 </div>
                 <div class="film item">
                     <div class="bg">
-                        <img src="../images/film_img1.png" alt="">
+                        <img class="bg-img" src="../images/film_img6.png" alt="상영 예정작 이미지">
                     </div>
                     <div class="caption">
-                        <h4>Lorem ipsum</h4> 
-                        <h5>Lorem ipsum</h5> 
+                        <h4>즐거운 저녁이여</h4> 
+                        <h5>일을 마치고 난 후 공원에서 즐기고 있는 여인</h5> 
                     </div>
                 </div>
                 <div class="film item">
                     <div class="bg">
-                        <img src="../images/film_img1.png" alt="">
+                        <img class="bg-img" src="../images/film_img11.png" alt="상영 예정작 이미지">
                     </div>
                     <div class="caption">
-                        <h4>Lorem ipsum</h4> 
-                        <h5>Lorem ipsum</h5> 
+                        <h4>나도 감독이다</h4> 
+                        <h5>일반인이 감독이 되는 과정을 그린 영화</h5> 
                     </div>
                 </div>
                 <div class="film item">
                     <div class="bg">
-                        <img src="../images/film_img1.png" alt="">
+                        <img class="bg-img" src="../images/film_img9.png" alt="상영 예정작 이미지">
                     </div>
                     <div class="caption">
-                        <h4>Lorem ipsum</h4> 
-                        <h5>Lorem ipsum</h5> 
-                    </div>
-                </div>
-                <div class="film item">
-                    <div class="bg">
-                        <img src="../images/film_img1.png" alt="">
-                    </div>
-                    <div class="caption">
-                        <h4>Lorem ipsum</h4> 
-                        <h5>Lorem ipsum</h5> 
+                        <h4>아빠와 나</h4> 
+                        <h5>아빠가 아이를 돌보고 있다.</h5> 
                     </div>
                 </div>
             </div>
@@ -156,7 +147,13 @@
     <div id="mobile_menu"></div>
     <!-- 스폰서 -->
     <section id="main_sponser">
-        스폰서
+        <div>
+            <img src="../images/logo_cgv.png" alt="스폰서 로고">
+            <img src="../images/logo_lotte_c.png" alt="스폰서 로고">
+            <img src="../images/logo_showbox.png" alt="스폰서 로고">
+            <img src="../images/logo_cj.png" alt="스폰서 로고">
+            <img src="../images/logo_busanbank.png" alt="스폰서 로고">
+        </div>
     </section>
     <!-- 푸터(공통) -->
     <footer id="main_footer">
