10/26 미디어 쿼리 수정, active bar 추가

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>부산국제영화제</title>
-      <link rel="stylesheet" href="library/swiper.css">
-      <link rel="stylesheet" href="library/fontawesome-free-5.15.4-web/css/all.min.css">
-      <link rel="stylesheet" href="css/common.css">
-      <link rel="stylesheet" href="css/main.css">
+      <link rel="stylesheet" type="text/css" href="library/swiper.css">
+      <link rel="stylesheet" type="text/css" href="library/fontawesome-free-5.15.4-web/css/all.min.css">
+      <link rel="stylesheet" type="text/css" href="css/common.css">
+      <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
       <!-- 상단바(공통) -->
@@ -26,10 +26,13 @@
                         </ul>
                   </div>
                   <div class="trigger">
-                        <a href="#" class="mobile hamburger" style="color: white;"><i class="fas fa-bars fa-lg"></i></a>
-                        <a href="#" class="mobile close" style="color: white;"><i class="fas fa-times fa-lg"></i></a>
+                        <a href="#" class="mobile hamburger" style="color: white;"><i class="fas fa-bars fa-2x"></i></a>
+                        <a href="#" class="mobile close" style="color: white;"><i class="fas fa-times fa-2x"></i></a>
                   </div>
             </nav>
+            <div class="active_path">
+                  <div class="active_bar"></div>
+            </div>
       </header>
       <!-- 컨텐츠 -->
       <div id="main_content">
@@ -79,7 +82,7 @@
                   <div class="films_container">
                         <div class="left-row film film1">
                               <div class="bg">
-                                    <img class="bg-img" src="./images/film_img1.png" alt="갤러리 이미지">
+                                    <img class="bg-img" src="./images/film_img11.png" alt="갤러리 이미지">
                               </div>
                               <div class="film-caption">
                                     <h4>나는 감독이다</h4>
