--- a/pages/announce.html
+++ b/pages/announce.html
@@ -5,9 +5,9 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>부산국제영화제</title>
-      <link rel="stylesheet" href="../library/fontawesome-free-5.15.4-web/css/all.min.css">
-      <link rel="stylesheet" href="../css/common.css">
-      <link rel="stylesheet" href="../css/announce.css">
+      <link rel="stylesheet" type="text/css" href="../library/fontawesome-free-5.15.4-web/css/all.min.css">
+      <link rel="stylesheet" type="text/css" href="../css/common.css">
+      <link rel="stylesheet" type="text/css" href="../css/announce.css">
 </head>
 <body>
       <!-- 상단바(공통) -->
@@ -25,19 +25,22 @@
                         </ul>
                   </div>
                   <div class="trigger">
-                        <a href="#" class="mobile hamburger" style="color: white;"><i class="fas fa-bars fa-lg"></i></a>
-                        <a href="#" class="mobile close" style="color: white;"><i class="fas fa-times fa-lg"></i></a>
+                        <a href="#" class="mobile hamburger" style="color: white;"><i class="fas fa-bars fa-2x"></i></a>
+                        <a href="#" class="mobile close" style="color: white;"><i class="fas fa-times fa-2x"></i></a>
                   </div>
             </nav>
+            <div class="active_path">
+                  <div class="active_bar"></div>
+            </div>
       </header>
       <!-- 메뉴 -->
       <div id="wrap">
             <aside id="main_aside">
                   <ul>
-                        <li class="side menu on"><a href="#">소개</a></li>
-                        <li class="side menu on"><a href="#">포스터</a></li>
-                        <li class="side menu on"><a href="#">심사위원&시상</a></li>
-                        <li class="side menu on"><a href="#">파트너</a></li>
+                        <li class="side menu current"><a href="#">소개</a></li>
+                        <li class="side menu"><a href="#">포스터</a></li>
+                        <li class="side menu"><a href="#">심사위원&시상</a></li>
+                        <li class="side menu"><a href="#">파트너</a></li>
                   </ul>
             </aside>
             <div class="border"></div>
@@ -72,7 +75,7 @@
                   <h1>포스터</h1>
                   <div class="poster_container">
                         <div class="poster_img">
-                              <img src="../images/poster.png" width="300px" alt="포스터">
+                              <img src="../images/poster.png" alt="포스터">
                         </div>
                         <div class="poster_text">
                               <p>
