--- a/pages/event.html
+++ b/pages/event.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>부산국제영화제</title>
-    <link rel="stylesheet" href="../library/fontawesome-free-5.15.4-web/css/all.min.css">   
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/event.css">
+    <link rel="stylesheet" type="text/css" href="../library/fontawesome-free-5.15.4-web/css/all.min.css">   
+    <link rel="stylesheet" type="text/css" href="../css/common.css">
+    <link rel="stylesheet" type="text/css" href="../css/event.css">
 </head>
 <body>
     <!-- 상단바(공통) -->
@@ -25,10 +25,13 @@
                     </ul>
             </div>
             <div class="trigger">
-                    <a href="#" class="mobile hamburger" style="color: white;"><i class="fas fa-bars fa-lg"></i></a>
-                    <a href="#" class="mobile close" style="color: white;"><i class="fas fa-times fa-lg"></i></a>
+                    <a href="#" class="mobile hamburger" style="color: white;"><i class="fas fa-bars fa-2x"></i></a>
+                    <a href="#" class="mobile close" style="color: white;"><i class="fas fa-times fa-2x"></i></a>
             </div>
         </nav>
+        <div class="active_path">
+            <div class="active_bar"></div>
+        </div>
     </header>
     <!-- 야외 무대인사 -->
     <section id="content_event">
@@ -71,7 +74,7 @@
                 </div>
                 <div class="caption">
                     <h4>10.9(토) 12:00 야외무대인사</h4>
-                    <h5>영화의전당 BIFFXGENSIS 야외무대/h5>
+                    <h5>영화의전당 BIFFXGENSIS 야외무대</h5>
                 </div>
             </div>
             <div class="film item">
