--- a/pages/program.html
+++ b/pages/program.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>부산국제영화제</title>
-    <link rel="stylesheet" href="../library/fontawesome-free-5.15.4-web/css/all.min.css">
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/program.css">
+    <link rel="stylesheet" type="text/css" href="../library/fontawesome-free-5.15.4-web/css/all.min.css">
+    <link rel="stylesheet" type="text/css" href="../css/common.css">
+    <link rel="stylesheet" type="text/css" href="../css/program.css">
 </head>
 <body>
     <!-- 상단바(공통) -->
@@ -25,10 +25,13 @@
                     </ul>
             </div>
             <div class="trigger">
-                    <a href="#" class="mobile hamburger" style="color: white;"><i class="fas fa-bars fa-lg"></i></a>
-                    <a href="#" class="mobile close" style="color: white;"><i class="fas fa-times fa-lg"></i></a>
+                    <a href="#" class="mobile hamburger" style="color: white;"><i class="fas fa-bars fa-2x"></i></a>
+                    <a href="#" class="mobile close" style="color: white;"><i class="fas fa-times fa-2x"></i></a>
             </div>
         </nav>
+        <div class="active_path">
+            <div class="active_bar"></div>
+        </div>
     </header>
     <div id="wrap">
         <!-- 오늘의 상영작 -->
