swiper pagination 수정

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
       <!-- 모바일 메뉴 -->
       <div id="mobile_menu"></div>
       <!-- 스폰서 -->
-      <section id="main_sponser">
+      <section id="main_sponsor">
             <div>
                   <img src="./images/logo_cgv.png" alt="스폰서 로고">
                   <img src="./images/logo_lotte_c.png" alt="스폰서 로고">
